--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
   <body>
@@ -16,9 +21,10 @@
         <p class="published">Published 21 Dec 2023</p>
         <h1 class="blog-heading">HTML & CSS foundations</h1>
         <p class="blog-text">
-            These languages are the backbone of every website, defining structure, content, and presentation.
+          These languages are the backbone of every website, defining structure,
+          content, and presentation.
         </p>
-        <img src="image-avatar.webp" alt="" class="avatar">
+        <img src="image-avatar.webp" alt="" class="avatar" />
         <span class="name">Greg Hooper</span>
       </article>
     </main>
