added div for author section

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
           These languages are the backbone of every website, defining structure,
           content, and presentation.
         </p>
-        <img src="image-avatar.webp" alt="" class="avatar" />
-        <span class="name">Greg Hooper</span>
+        <div class="author">
+            <img src="image-avatar.webp" alt="" class="avatar" />
+            <span class="name">Greg Hooper</span>
+        </div>
       </article>
     </main>
   </body>
